[tool.poetry]
name = "hyahiaoui-github-io"
version = "0.1.0"
description = "Houssame's personal site, portefolio, blog and personal notes"
authors = ["Houssame Yahiaoui <houssame.yahiaoui@getalma.eu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
