[tool.poetry]
name = "hyahiaoui-github-io"
version = "0.1.0"
description = "Houssame's personal site, portefolio, blog and notes"
authors = ["Houssame Yahiaoui <houssame.yahiaoui@getalma.eu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"
pymdown-extensions = "^10.12"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-minify-html-plugin = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
